force-app/main/default/src/objects/PJN_CarePlan_Path_Keys_Setting__mdt/PJN_CarePlan_Path_Keys_Setting__mdt.object-meta.xml
<CustomObject>
    <description>App: Patient Journey Navigator
Impacted Functionality: Program Builder; Care Plan Path
Purpose: Define the key fields to be displayed on the Care Plan for each program problem/stage.
Metadata Relationship(s): CarePlan Path Coaching Setting
Created by Mavens: Yes</description>
    <label>CarePlan Path Keys Setting</label>
    <pluralLabel>CarePlan Path Keys Settings</pluralLabel>
</CustomObject>