force-app/main/default/src/objects/PJN_CarePlan_Path_Keys_Setting__mdt/fields/PJN_CarePlan_Path_Coaching_Setting__c.field-meta.xml
<CustomField>
    <fullName>PJN_CarePlan_Path_Coaching_Setting__c</fullName>
    <label>CarePlan Path Coaching Setting</label>
    <referenceTo>PJN_CarePlan_Path_Coaching_Setting__mdt</referenceTo>
    <relationshipLabel>CarePlan Path Keys Settings</relationshipLabel>
    <relationshipName>PJN_CarePlan_Path_Keys_Settings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>