force-app/main/default/src/objects/PJN_CarePlan_Path_Keys_Setting__mdt/fields/PJN_Columns__c.field-meta.xml
<CustomField>
    <fullName>PJN_Columns__c</fullName>
    <defaultValue>2</defaultValue>
    <label>Columns</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>