force-app/main/default/src/objects/PJN_CarePlan_Path_Keys_Setting__mdt/fields/PJN_Fields__c.field-meta.xml
<CustomField>
    <fullName>PJN_Fields__c</fullName>
    <label>Fields</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>