force-app/main/default/src/objects/PJN_CarePlan_Path_Keys_Setting__mdt/listViews/PJN_All_Path_Keys_Settings.listView-meta.xml
<ListView>
    <fullName>PJN_All_Path_Keys_Settings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>PJN_CarePlan_Path_Coaching_Setting__c</columns>
    <columns>PJN_Fields__c</columns>
    <columns>PJN_Columns__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Path Keys Settings</label>
    <language>en_US</language>
</ListView>